# AIOS

./: .aios_onboarding_demo.sh  .gitignore  AI_ARCHITECTURE_DIAGRAM.txt  Cargo_python.toml  FEATURES.md  FILES_CREATED.md  FINAL_SUMMARY.txt  FULLOS.md  GETTING_STARTED.md  GPU_ACCELERATION_GUIDE.md  IMPLEMENTATION_COMPLETE.txt  INSTALLATION_SUCCESS.md  INSTALL_FIX.md  INSTALL_QEMU.md  Makefile  Makefile.boot  README.md  aios_kernel.py  build.sh  build_iso.sh  build_iso_with_ai.sh  build_python.sh  compile_python_native.sh  demo.py  deploy_production.sh  grub.cfg  qemu_debug.sh  requirements_gui.txt  run_aios_with_avatar.py  run_onboarding.py  run_qemu.sh  setup_onboarding.sh  start_binary_avatar.sh  system_specs.json  test_binary_avatar.py  test_onboarding.py  test_qemu_network.sh  test_qemu_simple.sh
kernel_rs/: Cargo.toml  build.rs  build_llama.sh  build_llama_gpu.sh  linker.ld  x86_64-aios.json
kernel_rs/src/: allocator.rs  init.rs  interrupts.rs  main.rs  memory.rs  native_python.rs  process.rs  security.rs  serial.rs  syscall.rs  task.rs  vga_buffer.rs
kernel_rs/src/ai/: benchmark.rs  cloud.rs  context.rs  conversation.rs  gpu_accel.rs  llama.rs  mod.rs  model_loader.rs  streaming.rs
kernel_rs/src/drivers/: ahci.rs  audio.rs  camera.rs  disk.rs  e1000.rs  gpu.rs  mod.rs  network.rs  pci.rs
kernel_rs/src/fs/: ext2.rs  fat32.rs  mod.rs  vfs.rs
kernel_rs/src/net/: device.rs  dhcp.rs  dns.rs  http.rs  mod.rs  smoltcp_device.rs  socket.rs  stack.rs  tls.rs  tls_optimized.rs  websocket.rs
kernel_rs/src/python/: bindings.rs  ffi.rs  mod.rs  runtime.rs
(+72 files in other folders)
